now showing real data from back end, in particular, skip browserid step if we already have some user data (although need to change to allow for browserid assertion checking) and show list of servers. setting the server value does not work yet.

--- a/clients/addon/data/addon/index.html
+++ b/clients/addon/data/addon/index.html
@@ -33,6 +33,11 @@
             </form>
           </div>
         </div>
+        <div data-cardid="needServer" title="Missing Server" class="card noiscroll">
+          <div class="scroller">
+            <a class="item" href="#pickServer">Pick a server</a>
+          </div>
+        </div>
         <div data-cardid="pickServer" title="Pick Server" class="card">
           <div class="scroller" data-childclass="serverLink">
           </div>
@@ -94,7 +99,7 @@
       <a data-classimpl="addServerLink" class="item" href="#enterServer">+ Add Server</a>
 
       <a data-classimpl="serverLink" class="item" data-nonav="nonav" href="#connectToServer?id=">
-        <span data-bind="id"></span>
+        <span data-bind="displayName"></span> (<span data-bind="url"></span>)
       </a>
 
       <form data-classimpl="compose" class="compose">
