Got ui to send message to back end, but seems to disappear after that, no callback returned.

--- a/clients/firefox/clientdaemon.html
+++ b/clients/firefox/clientdaemon.html
@@ -87,6 +87,7 @@ function BOOTSTRAP(callbackWhenLoaded) {
         'path': '../../addon/js/path',
         'timers': '../../addon/js/timers',
         'util': '../../addon/js/util',
+        'url': '../../addon/js/url',
         'xmlhttprequest': '../../addon/js/xmlhttprequest',
         // testing-informed stubs
         'event-queue': '../../addon/js/event-queue',
