Have the server be capable of exposing its logs and the client show'em.
- We add a "--loggest-web-debug" to the server to put it in this mode.
- We do some ugly trickery to make "about:loggest-server" be able to
  relay the server's (modified to http) URL to the loggest UI which then
  uses a one-off XHR to get the current data/backlog.
- These debug modes would probably benefit from generating name aliases
  so we don't have to see the gibberish binary data of the keys/nonces.
- The server is not being escalated into test logging mode; an extra
  flag may be necessary to help figure out what is going wrong.

--- a/clients/firefox/clientdaemon.html
+++ b/clients/firefox/clientdaemon.html
@@ -191,6 +191,10 @@ function DEAD_LOG_CLIENT(name) {
     loggerClients.splice(idx, 1);
 }
 
+function GIMME_TRANSIT_SERVER_URL() {
+  return RAW_CLIENT._transitServer && RAW_CLIENT._transitServer.url;
+}
+
 ////////////////////////////////////////////////////////////////////////////////
 
 window.onerror = function (err) {
