--- a/clients/logui/content/index.html
+++ b/clients/logui/content/index.html
@@ -26,6 +26,7 @@
       paths: {
         // XXX yuck, wmsy has its own d3 right now that is older.
         d3: "arbpl/client/deps/d3.min",
+        xmlhttprequest: "../../addon/js/xmlhttprequest",
       },
       packages: [
         { name: "rdlogui", location: "../logui/lib/rdlogui" },
@@ -44,7 +45,7 @@
         require(["rdlogui/app"],
           function(mainModule) {
             mainModule.main(document);
-        });
+          });
       },
     });
   </script>
