about:loggest-server: use names from about:loggest logic for sanity
So, the server is not generating any names in its log, so we steal them
from the logic we use in about:loggest.  Unfortunately, this still does
not cover all of the crypto keys that can be seen.  Specifically, the
client keys are a problem, since only the clients and the server know
those.  I will probably end up surfacing them directly from the server
at some point because the debug functionality is well isolated and it
would be stupidly useful.

This also cleans up the about:loggest-server setup a little bit more
by eliminating a setTimeout from the equation.

--- a/clients/firefox/clientdaemon.html
+++ b/clients/firefox/clientdaemon.html
@@ -296,12 +296,31 @@ setInterval(function() {
   }
 }, 1000);
 
-function NEW_LOG_CLIENT(name) {
+var LOGGER_CANNED_DATA_MAP = {};
+
+function NEW_LOG_CLIENT(name, cannedDataUrl) {
   // wait for the client to tell us about itself since loading can take a while
+  LOGGER_CANNED_DATA_MAP[name] = cannedDataUrl;
 }
 
 function LOG_CLIENT_MSG(name, msg) {
   if (msg.type === 'subscribe') {
+    var cannedDataUrl = LOGGER_CANNED_DATA_MAP[name];
+    delete LOGGER_CANNED_DATA_MAP[name];
+    if (cannedDataUrl) {
+      var msg = {
+        type: 'url',
+        url: cannedDataUrl,
+        annoFrag: {
+          named: {},
+        },
+      };
+      if (DEVELOPMENT_MODE)
+        annotateLogFragWithNames(msg.annoFrag);
+      daemonSendLoggerClientMessage(name, msg);
+      return;
+    }
+
     loggerClients.push(name);
     daemonSendLoggerClientMessage(name, {
       type: 'backlog',
