--- a/clients/addon/data/addon/index.html
+++ b/clients/addon/data/addon/index.html
@@ -125,14 +125,30 @@
           </div>
         </div>
 
+        <!-- askFriend: Confirm connecting to someone, provide a message -->
         <div data-cardid="askFriend" title="Make a friend!" class="card">
           <div class="scroller">
             <form class="askFriendForm standardForm">
-              <input type="text" name="server" placeholder="Enter server name">
-              <button>Send request</button>
+              <div>
+                I call this person: <input type="text" name="displayName">
+              </div>
+              <div class="askMessageBox">
+                <div class="askMessagePrompt">
+                  Message to send with this request:
+                </div>
+                <textarea class="askMessageTextArea" name="message"></textarea>
+              </div>
+              <button>Send connect request</button>
             </form>
           </div>
         </div>
+
+        <!-- notifications: Friend/connect requests, for now at least. -->
+        <div data-cardid="notifications" title="Friend requests" class="card">
+          <div class="scroller" data-childclass="connReq">
+          </div>
+        </div>
+
       </div>
     </div>
 
@@ -159,11 +175,29 @@
         <span class="newConversationText" data-bind="text"></span>
       </a>
 
-      <!-- A peep from the phonebook -->
-      <a class="private unread hbox" data-classimpl="peepPhonebook" href="#askFriend">
+      <!-- peepPhonebook: A peep from the phonebook -->
+      <a class="phonebookItem hbox" data-classimpl="peepPhonebook"
+         href="#askFriend">
         <div class="peepInfo">
-          <img class="peepInfoPic" data-bind="pic" data-attr="src" src="i/face2.png">
+          <img class="peepInfoPic" data-bind="pic" data-attr="src"
+               src="i/face2.png">
           <span data-bind="selfPoco.displayName" class="peepInfoName"></span>
+        </div>
+      </a>
+
+      <!-- connReq: A connect/friendship request -->
+      <a class="connReqItem vbox" data-classimpl="connReq" href="#acceptReq">
+        <div class="hbox">
+          <img class="peepInfoPic" data-bind="pic" data-attr="src"
+               src="i/face2.png">
+          <span data-bind="peep.selfPoco.displayName" class="peepInfoName"></span>
+        </div>
+        <div>
+          <span data-bind="peepServer.displayName"></span>
+        </div>
+        <div>
+          <span data-bind="receivedAt"></span>: 
+          <span data-bind="messageText"></span>
         </div>
       </a>
 
@@ -199,6 +233,7 @@
 
       <a data-classimpl="convListItem" class="item" href="#conversation?id="><span class="meta"></span></a>
 
+      <!-- Group messaging human message -->
       <div data-classimpl="message"  class="bubble">
         <a href='#user?id=' class="sender">
           <span class="avatar"><img src="i/face2.png" class="avatar" data-bind="from.pic" data-attr="src"/></span>
